# screenshot-ocr

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  pyoxidizer.bzl  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: labeler.yml
.github/workflows/: code-analysis.yml  docs.yml  labeler.yml  pypi-package.yml  test-package.yml  zizmor.yml
docs/: index.html  screenshot_ocr.html  search.js
docs/screenshot_ocr/: app.html  app_paths.html  cli.html  google_sheets.html  ocr.html  trivia.html  utils.html
screenshot_ocr/: cli.py  files.py  main.py  sheets.py  tesseract.py  trivia.py  utils.py
src/screenshot_ocr/: __about__.py  __init__.py  __main__.py  app.py  app_paths.py  cli.py  google_sheets.py  ocr.py  trivia.py  utils.py
src/screenshot_ocr/cli/: __init__.py
tests/: conftest.py  helpers.py  test_app_paths.py  test_cli.py  test_example.py  test_tesseract.py  test_trivia.py
tests/resources/examples/: Screenshot 2023-06-09 at 18-45-03 Facebook.txt  Screenshot 2023-06-16 at 18-49-13 Facebook.txt
